Fixed link flickering on larger screens.

--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,7 @@
 
 /* Contact Page -------------------------------- */
 .form-container {
-  margin-top: 7rem;
+  margin-top: 7.5rem;
   /* padding: 0.625rem; */
   max-width: 35rem;
 }
